[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/NokiaCellphoneFC.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Fonts/standard_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/HUD/restart.png" type="Texture" id=4]
[ext_resource path="res://Resources/HUD/lifebar-2.png" type="Texture" id=5]
[ext_resource path="res://Resources/HUD/lifebar-1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Controls/left_pressed.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Controls/left.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Controls/right.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Controls/right_pressed.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Controls/up_pressed.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Controls/up.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="GameOverContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -74.0
margin_right = 124.0
margin_bottom = 32.0
custom_constants/separation = 17
alignment = 1

[node name="GameOver" type="Label" parent="GameOverContainer"]
margin_right = 248.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverContainer"]
margin_top = 57.0
margin_right = 248.0
margin_bottom = 89.0
alignment = 1

[node name="Score" type="Label" parent="GameOverContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 177.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Score: "

[node name="FinalScore" type="Label" parent="GameOverContainer/HBoxContainer"]
margin_left = 181.0
margin_right = 200.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Control" type="Control" parent="GameOverContainer"]
margin_top = 106.0
margin_right = 248.0
margin_bottom = 106.0

[node name="Restart" type="TouchScreenButton" parent="GameOverContainer/Control"]
position = Vector2( 83, -2.5 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )

[node name="Scores" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -48.0
margin_right = 125.0
margin_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="ButtonLeft" type="TouchScreenButton" parent="Scores"]
position = Vector2( -130, -6 )
scale = Vector2( 1.4, 1.4 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
passby_press = true
action = "ui_left"

[node name="ButtonRight" type="TouchScreenButton" parent="Scores"]
position = Vector2( -70, -6 )
scale = Vector2( 1.4, 1.4 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )
passby_press = true
action = "ui_right"

[node name="ButtonUp" type="TouchScreenButton" parent="Scores"]
position = Vector2( 334, -6 )
scale = Vector2( 1.4, 1.4 )
normal = ExtResource( 12 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_up"

[node name="Lifebar" type="TextureProgress" parent="Scores"]
margin_right = 96.0
margin_bottom = 32.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )

[node name="Label" type="Label" parent="Scores"]
margin_left = 106.0
margin_top = 10.0
margin_right = 156.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Bombs:"

[node name="Score" type="Label" parent="Scores"]
margin_left = 166.0
margin_top = 10.0
margin_right = 173.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label2" type="Label" parent="Scores"]
margin_left = 183.0
margin_top = 10.0
margin_right = 233.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "| Time:"

[node name="Score2" type="Label" parent="Scores"]
margin_left = 243.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[connection signal="pressed" from="GameOverContainer/Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="value_changed" from="Scores/Lifebar" to="." method="_on_TextureProgress_value_changed"]
